k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deckofcards
  name: deckofcards
spec:
  type: NodePort
  ports:
    - name: 8000-tcp
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: deckofcards
