k8s/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: deckofcards
  name: deckofcards
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: deckofcards
    weight: 100
